[package]
name = "jwks-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
base64-url = "3.0.0"
chrono = "0.4.42"
jsonwebtoken = { version = "10.1.0", default-features = false, features = ["aws_lc_rs"]}
pem = "3.0.6"
rsa = "0.9.8"
rusqlite = "0.37.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "full"] }
warp = { version = "0.4.2", features = ["default", "server", "test"] }

[dev-dependencies]
tempfile = "3.23.0"
